Fix card alignment

--- a/style.css
+++ b/style.css
@@ -247,9 +247,17 @@ nav {
 }
 
 .grid-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(340px, 1fr));
-  gap: 1.5rem;
+  display: block;
+  gap: 4.5rem;
+}
+
+@media (min-width: 768px) {
+  .grid-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(340px, 1fr));
+    gap: 4.5rem;
+    margin: 0 8rem;
+  }
 }
 
 .grid-item {
@@ -259,16 +267,17 @@ nav {
   align-items: center;
   text-align: center;
   background-color: var(--color-neutral);
-  width: auto;
+  width: fit-content;
   border: 1px solid var(--color-neutral-border);
   border-radius: 8px;
   padding-top: 15.75rem;
-  margin: 0 auto;
+  margin-bottom: 1.5rem;
 }
 
 .description-container {
   display: flex;
   flex-direction: column;
+  width: auto;
   background-color: var(--color-white);
   border-radius: 8px;
 }
@@ -320,6 +329,7 @@ nav {
   background-repeat: no-repeat, no-repeat;
   text-align: center;
   padding: 1.875rem;
+  margin-bottom: 2rem;
 }
 
 @media (min-width: 768px) {
@@ -365,36 +375,40 @@ nav {
 }
 
 /* ---------------Cards Section--------------- */
-.cards {
-  display: block;
-  margin: 0.625rem auto;
-}
-
-.cards-grid-container ul {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(340px, 1fr));
-  align-items: center;
-  gap: 1.5rem;
-}
-
-.cards-grid-container li {
+.cards-flex-container {
   display: flex;
   flex-direction: column;
-  text-align: center;
-  background-color: var(--color-neutral);
-  width: auto;
-  border: 1px solid var(--color-neutral-border);
-  border-radius: 8px;
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
-  margin: 0 1.5625rem;
+  margin: 0 1rem;
+}
+
+@media (min-width: 768px) {
+  .cards-flex-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 4.5rem;
+    margin: 0 8rem;
+  }
 }
 
 .cards-description {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  height: 350px;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+  text-align: center;
+  list-style-type: none;
+  background-color: var(--color-neutral);
+  border-radius: 8px;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  margin-bottom: 1.5rem;
+  width: auto;
+}
+
+.cards-description img {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  height: 180px;
 }
 
 .cards-description h2 {
@@ -409,6 +423,7 @@ nav {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  gap: 0.5rem;
 }
 
 .cards-description li {
@@ -646,7 +661,7 @@ nav {
   color: var(--color-darkgreen);
 }
 
-.cards li:hover {
+.cards-description h2:hover {
   color: var(--color-darkgreen);
 }
 
